--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,13 +1,13 @@
 .btn {
-  display: block;
   width: 200px;
   height: 50px;
   padding-left: 29px;
 
-  background: $active-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
   outline: none;
+  border: none;
+  background: $active-color;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   font-family: $main-font;
   font-weight: bold;
@@ -15,10 +15,6 @@
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
-
-  transition: background-color $transition-animation,
-    box-shadow $transition-animation, border-radius $transition-animation,
-    color $transition-animation;
 
   display: flex;
   align-items: center;
@@ -31,8 +27,6 @@
   &:hover,
   &:focus {
     background: #188ce8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    outline: none;
   }
 
   &__hero {
