--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -9,7 +9,7 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
 
-    padding-top: 32px;
+    padding: 32px 32px;
 
     display: flex;
     align-items: center;
@@ -28,8 +28,6 @@
     font-size: 14px;
     line-height: 1.15;
     letter-spacing: 0.02em;
-    padding-bottom: 34px;
-
     color: $accent-color;
 
     display: block;
@@ -54,8 +52,8 @@
       height: 4px;
       background-color: $active-color;
       border-radius: 2px;
-      left: 0;
-      bottom: 0;
+      margin: 0 auto;
+      margin-top: 28px;
 
       color: $active-color;
       transition: $transition-animation;
