--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -45,6 +45,7 @@
       line-height: 1.18;
       text-align: center;
       letter-spacing: 0.03em;
+      margin-bottom: 10px;
 
       color: $accent-color;
     }
@@ -56,7 +57,6 @@
       line-height: 1.18;
       text-align: center;
       letter-spacing: 0.03em;
-      padding-top: 10px;
       margin-bottom: 16px;
 
       color: $secondary-color;
@@ -130,6 +130,7 @@
       line-height: 1.18;
       text-align: center;
       letter-spacing: 0.03em;
+      margin-bottom: 10px;
 
       color: $accent-color;
     }
@@ -141,7 +142,6 @@
       line-height: 1.18;
       text-align: center;
       letter-spacing: 0.03em;
-      padding-top: 10px;
       margin-bottom: 16px;
 
       color: $secondary-color;
@@ -206,6 +206,7 @@
       line-height: 1.18;
       text-align: center;
       letter-spacing: 0.03em;
+      margin-bottom: 10px;
 
       color: $accent-color;
     }
@@ -217,7 +218,6 @@
       line-height: 1.18;
       text-align: center;
       letter-spacing: 0.03em;
-      padding-top: 10px;
       margin-bottom: 16px;
 
       color: $secondary-color;
