--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,10 @@ button {
   justify-content: space-between;
 }
 
+.social-list__item {
+  text-align: center;
+}
+
 .social-list__link {
   display: flex;
   justify-content: center;
@@ -657,13 +661,7 @@ button {
     text-align: center;
     color: #ffffff;
   }
-  .social-list__item {
-    text-align: center;
-  }
-  .social-list__item:not(:last-child) {
-    margin-bottom: 10px;
-  }
-  .social-list__link {
+  __link {
     font-family: "Roboto", sans-serif;
     font-weight: normal;
     font-size: 14px;
@@ -672,58 +670,66 @@ button {
     text-align: center;
     color: #ffffff;
   }
-  .contact__link {
-    display: block;
-    text-align: center;
-    color: #757575;
-  }
-  .subscribe {
-    display: block;
-    text-align: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 60px;
-  }
-  .subscribe__title {
-    font-family: "Roboto", sans-serif;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .subscribe__footer {
-    width: 100%;
-    display: inline-flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .subscribe__input {
-    width: 100%;
-    height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background: #2f303a;
-    outline: none;
-    margin-right: 12px;
-    padding-left: 16px;
-    margin-bottom: 20px;
-    color: #ffffff;
-    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  }
-  .subscribe__input:hover, .subscribe__input:focus {
-    border: 1px solid #2196f3;
-  }
-  .subscribe__input input[name="email"] {
-    color: #ffffff;
-  }
-  .subscribe__send {
-    margin-left: 10px;
-  }
+}
+
+.contact__link {
+  display: block;
+  text-align: center;
+  color: #757575;
+}
+
+.subscribe {
+  display: block;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+}
+
+.subscribe__title {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.subscribe__footer {
+  width: 100%;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.subscribe__input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: #2f303a;
+  outline: none;
+  margin-right: 12px;
+  padding-left: 16px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.subscribe__input:hover, .subscribe__input:focus {
+  border: 1px solid #2196f3;
+}
+
+.subscribe__input input[name="email"] {
+  color: #ffffff;
+}
+
+.subscribe__send {
+  margin-left: 10px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1883,6 +1889,8 @@ button {
     background: #ffffff;
     border: 1px solid #eeeeee;
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   }
   .projects__link:hover, .projects__link:focus {
@@ -1958,6 +1966,8 @@ button {
   .projects__link {
     background: #ffffff;
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   }
   .projects__link:hover, .projects__link:focus {
@@ -2026,6 +2036,10 @@ button {
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   }
   .projects__link {
+    background: #ffffff;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   }
   .projects__link:hover, .projects__link:focus {
