--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -34,6 +34,8 @@
       background: #ffffff;
       border: 1px solid #eeeeee;
       box-sizing: border-box;
+      width: 100%;
+      height: 100%;
 
       transition: $transition-animation;
 
@@ -128,6 +130,8 @@
     &__link {
       background: #ffffff;
       box-sizing: border-box;
+      width: 100%;
+      height: 100%;
 
       transition: $transition-animation;
 
@@ -219,8 +223,10 @@
     }
 
     &__link {
-      // background: #ffffff;
-      // box-sizing: border-box;
+      background: #ffffff;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
 
       transition: $transition-animation;
 
