--- a/sass/layout/_filters.scss
+++ b/sass/layout/_filters.scss
@@ -1,5 +1,19 @@
 @media screen and (max-width: 767px) {
   .filters {
+    &__list {
+      display: flex;
+      width: 100%;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      padding-bottom: 40px;
+
+      &:first-child {
+        color: #ffffff;
+        border-color: $active-color;
+      }
+    }
+
     &__item {
       border-radius: 4px;
 
@@ -20,15 +34,6 @@
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
           0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       }
-    }
-
-    &__list {
-      display: flex;
-      width: 100%;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      padding-bottom: 40px;
     }
   }
 
@@ -70,6 +75,10 @@
 
       transition: $transition-animation;
 
+      &:first-child {
+        color: $active-color;
+      }
+
       &:focus,
       &:hover {
         color: $active-color;
@@ -82,6 +91,10 @@
       display: flex;
       justify-content: center;
       padding-bottom: 30px;
+      &:first-child {
+        color: #ffffff;
+        border-color: $active-color;
+      }
     }
   }
 
@@ -135,6 +148,11 @@
       display: flex;
       justify-content: center;
       padding-bottom: 50px;
+
+      &:first-child {
+        color: #ffffff;
+        border-color: $active-color;
+      }
     }
   }
 
