--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -179,11 +179,6 @@
       align-items: center;
       margin-bottom: 10px;
       fill: $secondary-color;
-
-      // &:not(:last-child) {
-      //   padding-bottom: 10px;
-      //   margin-right: 0;
-      // }
     }
 
     &__link {
@@ -227,11 +222,11 @@
       display: flex;
       align-items: center;
       fill: $secondary-color;
+      margin-bottom: 0;
 
       &:not(:last-child) {
-        display: flex;
+        // display: flex;
         margin-right: 50px;
-        padding-bottom: 0;
       }
 
       &__icon {
