--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,6 +3,6 @@ $secondary-font: "Raleway", sans-serif;
 $accent-color: #212121;
 $secondary-color: #757575;
 $active-color: #2196f3;
-$section-p: 94px;
+$section-p: 94px 0;
 $transition-animation: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 $color-footer: #2f303a;
