--- a/css/main.css
+++ b/css/main.css
@@ -1248,8 +1248,8 @@ button {
   .features {
     display: flex;
     align-items: center;
-    padding-bottom: 94px;
-    padding-top: 94px;
+    padding-bottom: 94px 0;
+    padding-top: 94px 0;
   }
   .features__list {
     display: flex;
@@ -1311,7 +1311,7 @@ button {
   .about {
     display: flex;
     align-items: center;
-    padding-bottom: 94px;
+    padding: 94px 0;
   }
   .about__title {
     font-family: "Roboto", sans-serif;
@@ -1351,10 +1351,11 @@ button {
     bottom: 0;
     background: rgba(47, 48, 58, 0.8);
     color: #ffffff;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    padding-left: auto;
     width: 100%;
+    height: 70px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -1487,8 +1488,8 @@ button {
 @media screen and (min-width: 1200px) {
   .team {
     background: #f5f4fa;
-    padding-bottom: 94px;
-    padding-top: 94px;
+    padding-bottom: 94px 0;
+    padding-top: 94px 0;
   }
   .team__title {
     font-family: "Roboto", sans-serif;
@@ -1588,9 +1589,6 @@ button {
     align-items: center;
     width: 100%;
     height: 90px;
-    border: 1px solid #afb1b8;
-    box-sizing: border-box;
-    border-radius: 4px;
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   }
   .client__link:focus, .client__link:hover {
@@ -1670,8 +1668,8 @@ button {
   .client {
     display: flex;
     align-items: center;
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 94px 0;
+    padding-bottom: 94px 0;
   }
   .client__title {
     font-family: "Roboto", sans-serif;
@@ -1828,15 +1826,6 @@ button {
 }
 
 @media screen and (min-width: 1200px) {
-  .filters__item {
-    margin-right: 8px;
-    border-radius: 4px;
-    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  }
-  .filters__item:focus, .filters__item:hover {
-    color: #2196f3;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
   .filters__list {
     display: flex;
     justify-content: center;
@@ -1845,6 +1834,15 @@ button {
   .filters__list:first-child {
     color: #ffffff;
     border-color: #2196f3;
+  }
+  .filters__item {
+    margin-right: 8px;
+    border-radius: 4px;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  }
+  .filters__item:focus, .filters__item:hover {
+    color: #2196f3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   }
   .btn-portfolio {
     font-family: "Roboto", sans-serif;
@@ -1883,13 +1881,15 @@ button {
     flex-wrap: wrap;
     margin-left: -30px;
     margin-bottom: -30px;
+    box-sizing: border-box;
   }
   .projects__item {
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-    flex-basis: calc(100% / 3 -20px);
+  }
+  .projects__item:not(last-child) {
+    flex-basis: calc(100% / 1 - 30px);
     margin-left: 30px;
-    margin-bottom: 30px;
-    width: 370px;
+    margin-top: 30px;
   }
   .projects__item:hover, .projects__item:focus {
     background: #ffffff;
@@ -1956,18 +1956,15 @@ button {
     flex-wrap: wrap;
     margin-left: -30px;
     margin-bottom: -30px;
+    box-sizing: border-box;
   }
   .projects__item {
+    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  }
+  .projects__item:not(last-child) {
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
-    margin-bottom: 30px;
-    align-content: flex-start;
-    max-width: 354px;
-    background: #ffffff;
-    border: 1px solid #eeeeee;
-    box-sizing: border-box;
-    cursor: pointer;
-    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    margin-top: 30px;
   }
   .projects__item:hover, .projects__item:focus {
     background: #ffffff;
@@ -2025,20 +2022,22 @@ button {
     border: 1px solid #ececec;
   }
   .projects {
-    padding: 94px;
+    padding: 94px 0;
   }
   .projects__list {
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-bottom: -30px;
+    box-sizing: border-box;
   }
   .projects__item {
-    flex-basis: calc(100% / 3 -30px);
-    width: 370px;
-    margin-left: 30px;
-    margin-bottom: 30px;
     transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  }
+  .projects__item:not(last-child) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
   }
   .projects__item:hover, .projects__item:focus {
     background: #ffffff;
