--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -14,7 +14,7 @@
   .about {
     display: flex;
     align-items: center;
-    padding-bottom: $section-p;
+    padding: $section-p;
 
     &__title {
       @include font();
@@ -56,10 +56,11 @@
       background: rgba(47, 48, 58, 0.8);
       color: #ffffff;
 
-      padding-top: 27px;
-      padding-bottom: 27px;
-      padding-left: auto;
       width: 100%;
+      height: 70px;
+      align-items: center;
+      display: flex;
+      justify-content: center;
     }
   }
 }
