--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -11,14 +11,20 @@
       flex-wrap: wrap;
       margin-left: -30px;
       margin-bottom: -30px;
+      box-sizing: border-box;
     }
 
     &__item {
+      // flex-basis: calc((100% - 30px * 3) / 3);
+      // margin-left: 30px;
+      // margin-bottom: 30px;
       transition: $transition-animation;
-      flex-basis: calc(100% / 3 -20px);
-      margin-left: 30px;
-      margin-bottom: 30px;
-      width: 370px;
+
+      &:not(last-child) {
+        flex-basis: calc(100% / 1 - 30px);
+        margin-left: 30px;
+        margin-top: 30px;
+      }
 
       &:hover,
       &:focus {
@@ -103,19 +109,17 @@
       flex-wrap: wrap;
       margin-left: -30px;
       margin-bottom: -30px;
+      box-sizing: border-box;
     }
 
     &__item {
-      flex-basis: calc(100% / 2 - 30px);
-      margin-left: 30px;
-      margin-bottom: 30px;
-      align-content: flex-start;
-      max-width: 354px;
-      background: #ffffff;
-      border: 1px solid #eeeeee;
-      box-sizing: border-box;
-      cursor: pointer;
       transition: $transition-animation;
+
+      &:not(last-child) {
+        flex-basis: calc(100% / 2 - 30px);
+        margin-left: 30px;
+        margin-top: 30px;
+      }
 
       &:hover,
       &:focus {
@@ -198,14 +202,20 @@
       flex-wrap: wrap;
       margin-left: -30px;
       margin-bottom: -30px;
+      box-sizing: border-box;
     }
 
     &__item {
-      flex-basis: calc(100% / 3 -30px);
-      width: 370px;
-      margin-left: 30px;
-      margin-bottom: 30px;
+      // flex-basis: calc((100% - 30px * 3) / 3);
+      // margin-left: 30px;
+      // margin-bottom: 30px;
       transition: $transition-animation;
+
+      &:not(last-child) {
+        flex-basis: calc(100% / 3 - 30px);
+        margin-left: 30px;
+        margin-top: 30px;
+      }
 
       &:hover,
       &:focus {
@@ -216,10 +226,6 @@
           0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
         transition: $transition-animation;
       }
-
-      // &:not(:last-child) {
-
-      // }
     }
 
     &__link {
