--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,171 +1,515 @@
-.modal-form {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 40px;
+@media screen and (max-width: 767px) {
+  .modal-form {
+    // width: 450px;
+    // height: 610px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
 
-  &__input-wrapper {
-    display: block;
-    position: relative;
-    margin-bottom: 10px;
-  }
-
-  &__title {
-    font-family: $main-font;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-    color: $accent-color;
-    margin-bottom: 12px;
-  }
-
-  &__fild {
-    margin-bottom: 4px;
-
-    font-family: $main-font;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-
-    color: $secondary-color;
-  }
-
-  &__input {
-    width: 100%;
-    height: 40px;
-
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-
-    padding-left: 42px;
-
-    transition: $transition-animation;
-
-    &:focus {
-      outline: none;
-      border: 1px solid $active-color;
-      cursor: pointer;
+    &__input-wrapper {
+      display: block;
+      position: relative;
+      margin-bottom: 10px;
     }
 
-    &:focus {
-      fill: $active-color;
+    &__title {
+      font-family: $main-font;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 1.5;
+      text-align: center;
+      letter-spacing: 0.03em;
 
-      .modal-form__icon {
-        fill: $active-color;
-      }
-    }
-  }
-
-  &__icon {
-    position: absolute;
-    display: block;
-
-    fill: #000000;
-
-    width: 18px;
-    height: 18px;
-
-    top: 50%;
-    left: 12px;
-    transform: translateY(-50%);
-
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  &__comment {
-    width: 100%;
-    height: 120px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    margin-bottom: 20px;
-    padding: 12px 16px;
-    resize: none;
-    overflow: hidden;
-    margin-top: 4px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:focus {
-      border: 1px solid $active-color;
-      outline: none;
+      color: $accent-color;
+      margin-bottom: 12px;
     }
 
-    &::placeholder {
+    &__fild {
+      margin-bottom: 4px;
+
       font-family: $main-font;
       font-weight: normal;
       font-size: 12px;
       line-height: 1.16;
       letter-spacing: 0.01em;
 
-      color: rgba(117, 117, 117, 0.5);
-      margin-bottom: 25px;
+      color: $secondary-color;
     }
-  }
 
-  &__check-desc {
-    display: flex;
-    align-items: center;
+    &__input {
+      width: 100%;
+      height: 40px;
 
-    font-family: $main-font;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
 
-    color: #757575;
-  }
+      padding-left: 42px;
 
-  &__check-desc::before {
-    display: block;
-    content: "";
-    width: 16px;
-    height: 15px;
-    border: 1px solid $accent-color;
-    border-radius: 2px;
-    margin-right: 8px;
-    cursor: pointer;
-  }
+      transition: $transition-animation;
 
-  &__tern {
-    background: $accent-color;
-    border-radius: 2px;
-    transition: $transition-animation;
+      &:focus {
+        outline: none;
+        border: 1px solid $active-color;
+        cursor: pointer;
+      }
 
-    &:checked {
-      background-image: url("../images/icon-check.svg");
-      background-position: center;
-      cursor: pointer;
-      border: 1px solid $active-color;
+      &:focus {
+        fill: $active-color;
+
+        .modal-form__icon {
+          fill: $active-color;
+        }
+      }
+    }
+
+    &__icon {
+      position: absolute;
+      display: block;
+
+      fill: #000000;
+
+      width: 18px;
+      height: 18px;
+
+      top: 50%;
+      left: 12px;
+      transform: translateY(-50%);
+
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__comment {
+      width: 100%;
+      height: 120px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      margin-bottom: 20px;
+      padding: 12px 16px;
+      resize: none;
+      overflow: hidden;
+      margin-top: 4px;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:focus {
+        border: 1px solid $active-color;
+        outline: none;
+      }
+
+      &::placeholder {
+        font-family: $main-font;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+
+        color: rgba(117, 117, 117, 0.5);
+        margin-bottom: 25px;
+      }
+    }
+
+    &__check-desc {
+      display: flex;
+      align-items: center;
+
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.03em;
+
+      color: #757575;
+    }
+
+    &__check-desc::before {
+      display: block;
+      content: "";
+      width: 16px;
+      height: 15px;
+      border: 1px solid $accent-color;
       border-radius: 2px;
+      margin-right: 8px;
+      cursor: pointer;
+    }
 
-      .modal-form__check-desc::before {
+    &__tern {
+      background: $accent-color;
+      border-radius: 2px;
+      transition: $transition-animation;
+
+      &:checked {
         background-image: url("../images/icon-check.svg");
         background-position: center;
         cursor: pointer;
         border: 1px solid $active-color;
         border-radius: 2px;
+
+        .modal-form__check-desc::before {
+          background-image: url("../images/icon-check.svg");
+          background-position: center;
+          cursor: pointer;
+          border: 1px solid $active-color;
+          border-radius: 2px;
+        }
       }
-    }
 
-    &:focus {
-      box-shadow: 0 0 0 $accent-color;
-      border: 1px solid $active-color;
-
-      .modal-form__check-desc::before {
+      &:focus {
         box-shadow: 0 0 0 $accent-color;
         border: 1px solid $active-color;
+
+        .modal-form__check-desc::before {
+          box-shadow: 0 0 0 $accent-color;
+          border: 1px solid $active-color;
+        }
       }
     }
-  }
 
-  &__link {
-    color: $active-color;
+    &__link {
+      color: $active-color;
+    }
   }
 }
 
+@media screen and (min-width: 768px) {
+  .modal-form {
+    // width: 450px;
+    // height: 610px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+
+    &__input-wrapper {
+      display: block;
+      position: relative;
+      margin-bottom: 10px;
+    }
+
+    &__title {
+      font-family: $main-font;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 1.5;
+      text-align: center;
+      letter-spacing: 0.03em;
+
+      color: $accent-color;
+      margin-bottom: 12px;
+    }
+
+    &__fild {
+      margin-bottom: 4px;
+
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.01em;
+
+      color: $secondary-color;
+    }
+
+    &__input {
+      width: 100%;
+      height: 40px;
+
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+
+      padding-left: 42px;
+
+      transition: $transition-animation;
+
+      &:focus {
+        outline: none;
+        border: 1px solid $active-color;
+        cursor: pointer;
+      }
+
+      &:focus {
+        fill: $active-color;
+
+        .modal-form__icon {
+          fill: $active-color;
+        }
+      }
+    }
+
+    &__icon {
+      position: absolute;
+      display: block;
+
+      fill: #000000;
+
+      width: 18px;
+      height: 18px;
+
+      top: 50%;
+      left: 12px;
+      transform: translateY(-50%);
+
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__comment {
+      width: 100%;
+      height: 120px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      margin-bottom: 20px;
+      padding: 12px 16px;
+      resize: none;
+      overflow: hidden;
+      margin-top: 4px;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:focus {
+        border: 1px solid $active-color;
+        outline: none;
+      }
+
+      &::placeholder {
+        font-family: $main-font;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+
+        color: rgba(117, 117, 117, 0.5);
+        margin-bottom: 25px;
+      }
+    }
+
+    &__check-desc {
+      display: flex;
+      align-items: center;
+
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.03em;
+
+      color: #757575;
+    }
+
+    &__check-desc::before {
+      display: block;
+      content: "";
+      width: 16px;
+      height: 15px;
+      border: 1px solid $accent-color;
+      border-radius: 2px;
+      margin-right: 8px;
+      cursor: pointer;
+    }
+
+    &__tern {
+      background: $accent-color;
+      border-radius: 2px;
+      transition: $transition-animation;
+
+      &:checked {
+        background-image: url("../images/icon-check.svg");
+        background-position: center;
+        cursor: pointer;
+        border: 1px solid $active-color;
+        border-radius: 2px;
+
+        .modal-form__check-desc::before {
+          background-image: url("../images/icon-check.svg");
+          background-position: center;
+          cursor: pointer;
+          border: 1px solid $active-color;
+          border-radius: 2px;
+        }
+      }
+
+      &:focus {
+        box-shadow: 0 0 0 $accent-color;
+        border: 1px solid $active-color;
+
+        .modal-form__check-desc::before {
+          box-shadow: 0 0 0 $accent-color;
+          border: 1px solid $active-color;
+        }
+      }
+    }
+
+    &__link {
+      color: $active-color;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form {
+    // width: 450px;
+    // height: 610px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+
+    &__input-wrapper {
+      display: block;
+      position: relative;
+      margin-bottom: 10px;
+    }
+
+    &__title {
+      font-family: $main-font;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 1.5;
+      text-align: center;
+      letter-spacing: 0.03em;
+
+      color: $accent-color;
+      margin-bottom: 12px;
+    }
+
+    &__fild {
+      margin-bottom: 4px;
+
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.01em;
+
+      color: $secondary-color;
+    }
+
+    &__input {
+      width: 100%;
+      height: 40px;
+
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+
+      padding-left: 42px;
+
+      transition: $transition-animation;
+
+      &:focus {
+        outline: none;
+        border: 1px solid $active-color;
+        cursor: pointer;
+      }
+
+      &:focus {
+        fill: $active-color;
+
+        .modal-form__icon {
+          fill: $active-color;
+        }
+      }
+    }
+
+    &__icon {
+      position: absolute;
+      display: block;
+
+      fill: #000000;
+
+      width: 18px;
+      height: 18px;
+
+      top: 50%;
+      left: 12px;
+      transform: translateY(-50%);
+
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__comment {
+      width: 100%;
+      height: 120px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      margin-bottom: 20px;
+      padding: 12px 16px;
+      resize: none;
+      overflow: hidden;
+      margin-top: 4px;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:focus {
+        border: 1px solid $active-color;
+        outline: none;
+      }
+
+      &::placeholder {
+        font-family: $main-font;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+
+        color: rgba(117, 117, 117, 0.5);
+        margin-bottom: 25px;
+      }
+    }
+
+    &__check-desc {
+      display: flex;
+      align-items: center;
+
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+
+      color: #757575;
+    }
+
+    &__check-desc::before {
+      display: block;
+      content: "";
+      width: 16px;
+      height: 15px;
+      border: 1px solid $accent-color;
+      border-radius: 2px;
+      margin-right: 8px;
+      cursor: pointer;
+    }
+
+    &__tern {
+      background: $accent-color;
+      border-radius: 2px;
+      transition: $transition-animation;
+
+      &:checked {
+        background-image: url("../images/icon-check.svg");
+        background-position: center;
+        cursor: pointer;
+        border: 1px solid $active-color;
+        border-radius: 2px;
+
+        .modal-form__check-desc::before {
+          background-image: url("../images/icon-check.svg");
+          background-position: center;
+          cursor: pointer;
+          border: 1px solid $active-color;
+          border-radius: 2px;
+        }
+      }
+
+      &:focus {
+        box-shadow: 0 0 0 $accent-color;
+        border: 1px solid $active-color;
+
+        .modal-form__check-desc::before {
+          box-shadow: 0 0 0 $accent-color;
+          border: 1px solid $active-color;
+        }
+      }
+    }
+
+    &__link {
+      color: $active-color;
+    }
+  }
+}
 .checkbox {
   display: flex;
   align-items: center;
