--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -44,7 +44,7 @@
 
 @media screen and (min-width: 768px) {
   .hero {
-    padding: 120px 204px;
+    padding: 120px 0;
     background-color: #c4c4c4;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
