--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -22,3 +22,15 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media screen and (max-width: 480px) {
+  .overlay {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 35px;
+
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+  }
+}
