--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,10 +3,6 @@
     background: #f5f4fa;
     padding: 60px 0;
 
-    // &__list {
-    //   width: 100%;
-    // }
-
     &__title {
       font-family: $main-font;
       font-weight: bold;
@@ -68,7 +64,7 @@
 
     &__item {
       &:not(:last-child) {
-        padding-right: 10px;
+        margin-right: 10px;
       }
     }
   }
