--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -110,8 +110,7 @@
   .features {
     display: flex;
     align-items: center;
-    padding-top: 94px;
-    padding-bottom: 0;
+    padding: $section-p;
 
     &__list {
       display: flex;
