--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -397,6 +397,12 @@
     }
 
     &__input {
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+
       width: 360px;
       height: 50px;
       border: 1px solid rgba(255, 255, 255, 0.3);
@@ -420,10 +426,6 @@
       input[name="email"] {
         color: #ffffff;
       }
-    }
-
-    input[name="email"] {
-      color: #ffffff;
     }
 
     &__send {
