--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -33,7 +33,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    max-width: 480px;
+    max-width: 767px;
     z-index: 100;
     padding: 48px 40px;
     background-color: #ffffff;
@@ -181,8 +181,8 @@
   }
 
   .contact {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    // padding-top: 20px;
+    // padding-bottom: 20px;
     display: inline-block;
     align-items: center;
     margin-left: auto;
@@ -191,10 +191,6 @@
       display: flex;
       align-items: center;
       fill: $secondary-color;
-
-      &:not(:last-child) {
-        margin-bottom: 10px;
-      }
     }
 
     &__link {
@@ -209,6 +205,14 @@
       color: $secondary-color;
       transition: $transition-animation;
 
+      &.mail {
+        padding-top: 20px;
+        margin-bottom: 10px;
+      }
+
+      &.tel {
+        padding-bottom: 20px;
+      }
       &:hover,
       &:focus {
         color: $active-color;
@@ -238,10 +242,9 @@
       display: flex;
       align-items: center;
       fill: $secondary-color;
-      margin-bottom: 0;
+      margin-top: 0;
 
       &:not(:last-child) {
-        // display: flex;
         margin-right: 50px;
       }
 
