--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -97,6 +97,12 @@
     }
 
     &__input {
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+
       width: 100%;
       height: 50px;
       border: 1px solid rgba(255, 255, 255, 0.3);
@@ -260,6 +266,12 @@
   }
 
   &__input {
+    font-family: $main-font;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
     width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
