--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -181,14 +181,12 @@
   }
 
   .contact {
-    // padding-top: 20px;
-    // padding-bottom: 20px;
     display: inline-block;
     align-items: center;
     margin-left: auto;
 
     &__item {
-      display: flex;
+      display: block;
       align-items: center;
       fill: $secondary-color;
     }
@@ -242,7 +240,6 @@
       display: flex;
       align-items: center;
       fill: $secondary-color;
-      margin-top: 0;
 
       &:not(:last-child) {
         margin-right: 50px;
@@ -267,12 +264,12 @@
         transition: $transition-animation;
 
         &.mail {
-          padding-top: 0px;
+          padding: 32px 0;
           margin-bottom: 0px;
         }
 
         &.tel {
-          padding-bottom: 0px;
+          padding: 32px 0;
         }
 
         &:hover,
