--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -91,6 +91,7 @@
     max-width: 1600px;
     background-color: #c4c4c4;
     padding: 200px 0;
+    margin: 0 auto;
 
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
